--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-hook-form-resolvers": "^0.0.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "react-spinners": "^0.13.8",
+    "react-spinners-kit": "^1.9.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "yup": "^1.2.0"
